# bachelorproef

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-experiment.yml  justfile  pyproject.toml
app/: main.py
app/src/: utils.py
controlled_experiment/: 02_preprocess_data.ipynb  03a_blur_quantification.ipynb  03b_create_ground_truth_dataset.ipynb  04_build_vector_indexes.ipynb  05_gaze_segmentation.ipynb  06_create_object_datasets.ipynb  07_majority_voting_prediction.ipynb  08_temporal_pooling_prediction.ipynb  09_yolo_prediction.ipynb  10_glocal_prediction.ipynb  11_render_final_predictions.ipynb  prediction_utils.py  settings.py
docs/: TODO  make_voorstel.sh  requirements.txt
docs/bachproef/: BronchartIlianBP.tex  analyse-en-resultaten.tex  analyse-resultaten.tex  analyse.tex  bachproef.bib  conclusie.tex  experiment.tex  grondwaarheid.tex  inleiding.tex  methodologie.tex  ontwikkeling.tex  oplossingsstrategieen.tex  samenvatting.tex  standvanzaken.tex  voorwoord.tex
docs/notes/: architecture.md  deblurring.md  feedback_1_checklist.md  gaze.md  grounding.md  misc.md  papers.md  software-architecture.md
docs/poster/: conference_poster.tex  hogent-poster.cls
docs/voorstel/: BronchartIlian-BPvoorstel.tex  Onderwerp.md  voorstel-inhoud.tex  voorstel.bib
experiment/: .gitignore  01_create_selections.ipynb  02_preprocess_data.ipynb  03a_blur_quantification.ipynb  03b_create_ground_truth_dataset.ipynb  04_build_vector_indexes.ipynb  04_gaze_segmentation.ipynb  05_create_object_datasets.ipynb  05_gaze_segmentation.ipynb  06_build_vector_indexes.ipynb  06_create_object_datasets.ipynb  06_fix_training_labels.ipynb  07_majority_voting_prediction.ipynb  07_validate_training_labels.ipynb  08_build_vector_indexes.ipynb  08_temporal_pooling_prediction.ipynb  09_majority_voting_prediction.ipynb  09_yolo_prediction.ipynb  10_glocal_prediction.ipynb  10_temporal_pooling_prediction.ipynb  11_render_final_predictions.ipynb  11_yolo_prediction.ipynb  12_object_detection.ipynb  12_performance.ipynb  12_performance_experiments.ipynb  12_prepare_object_detection_datasets.ipynb  12_train_object_detection.ipynb  13_predict_object_detection.ipynb  experiment_metadata.json  experiment_utils.py  labeling_checklist.md  prediction_utils.py  settings.py
experiment/scripts/: train_large_object_detector.py  train_object_detectors.py
experiments/controlled_experiment/: 02_preprocess_data.ipynb  03_create_ground_truth_dataset.ipynb  03a_blur_quantification.ipynb  README.md  settings.py  (+12 more)
notebooks/: fastsam-tracking.ipynb  fastsam.ipynb  gaze_sam_pipeline.ipynb  gaze_sam_tracking.ipynb  grounding_dino.ipynb  index.html  sam2-labeling-results.ipynb  tracking.ipynb
scripts/: export_fastsam_tensorrt.py  fastsam-tracking.py  test.py  test2.py
src/: aliases.py  config.py  main.py  utils.py
tests/: test_glasses.py
(+117 files in other folders)
